复习计算机网络

--- a/styles/main.css
+++ b/styles/main.css
@@ -239,7 +239,8 @@
 .des_select{font-weight:bold; margin:22px 0 12px; text-indent:17px;}
 .des_select span{color:#0479C9;}
 .shop_buy{text-align:center;}
-.shopping_btn,.buy_btn{display:inline-block; width:184px; height:48px; background:url(../images/icon/buy_btn.jpg) left top no-repeat;}
+.shopping_btn{display:inline-block; width:184px; height:48px; background:url(../images/icon/add_btn.jpg) left top no-repeat;}
+.buy_btn{display:inline-block; width:184px; height:48px; background:url(../images/icon/buy_btn.jpg) left top no-repeat;}
 .line{width:1px; height:90px; overflow:hidden; background-color:#CCC; display:inline-block; margin:0 40px;}
 .line,.shopping_btn,.buy_btn{vertical-align:middle;}
 .notes{color:#CCC; text-indent:17px;} 
